# meistravimas

./: .gitignore  CMakeCache.txt  CMakeLists.txt  TODO.org
GL/include/glad/: glad.h
GL/src/: glad.c
examples/: console.cpp  skeleton.cpp  tilebased.cpp
examples/imgui/: imgui.cpp  imgui.h  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
include/: blendish.h  buffer.h  bufferbuilder.h  canvas.h  colour.h  context.h  font.h  fontstash.h  gui.h  hashstring.h  image.h  images.h  jsonread.h  keyboard.h  locator.h  matrix33.h  matrix44.h  mouse.h  nanovg.h  nanovg_gl.h  nanovg_gl_utils.h  observer.h  opdefines.h  oui.h  panel.h  physfsrwops.h  picojson.h  pool.h  program.h  quat.h  random.h  render.h  renderstate.h  res_path.h  scheme-defs.h  scheme-private.h  scheme.h  scripting.h  service.h  servicecheckout.h  (+19 more)
oui-blendish/: CMakeLists.txt  blendish.h  oui.h
oui-blendish/nanovg/src/: stb_image.h
res/: test-f.glsl  test-v.glsl
res/images/: color-f.glsl  color-v.glsl  simple-f.glsl  simple-v.glsl  test.tga
res/scheme/: image.scm  test_one.scm
res/shaders/: gui-f.glsl  gui-v.glsl  sprite-f.glsl  sprite-v.glsl
src/: blendish.c  buffer.cpp  bufferbuilder.cpp  canvas.cpp  context.cpp  debug.cpp  font.cpp  fontstash.c  gui.cpp  hashstring.cpp  image.cpp  images.cpp  josonread.cpp  keyboard.cpp  locator.cpp  mouse.cpp  nanovg.c  nanovg_gl.c  nanovg_gl_utils.c  oui.c  panel.cpp  phsyfsrwops.c  program.cpp  quat.cpp  random.cpp  render.cpp  renderstate.cpp  res_path.cpp  scheme.c  scripting.cpp  servicecounter.cpp  shader.cpp  sheet.cpp  skeleton.cpp  sprite.cpp  stb_image.c  stb_textedit.c  stb_truetype.c  textedit.cpp  texture.cpp  (+7 more)
